--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=5.3.7",
-                "codeigniter/framework": "~3.1"
+                "codeigniter/framework": "~3.1",
+                "phpbenchmarks/code-igniter-common": "~3"
 	},
 	"require-dev": {
 		"mikey179/vfsStream": "1.1.*",
