Create Hello World benchmark

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ application/cache/*
 application/logs/*
 !application/logs/index.html
 
-!application/*/.htaccess
-
 composer.lock
 
 user_guide_src/build/*
@@ -19,7 +17,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 # IDE Files
 #-------------------------
 /nbproject/
-.idea/*
+.idea
 
 ## Sublime Text cache files
 *.tmlanguage.cache
