--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,10 @@
 {
-	"description": "CodeIgniter 3 Starter",
-	"name": "codeigniter3/starter3.1",
-	"type": "project",
-	"homepage": "https://codeigniter.com",
-	"license": "MIT",
+    "name": "phpbenchmarks/code-igniter",
+    "type": "project",
+    "license": "proprietary",
 	"require": {
 		"php": ">=5.3.7",
-                "codeigniter/framework": "~3.1",
-                "phpbenchmarks/code-igniter-common": "~3"
-	},
-	"require-dev": {
-		"mikey179/vfsStream": "1.1.*",
-		"phpunit/phpunit": "4.* || 5.*"
-	},
-	"suggest": {
-		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
-	},
-	"support": {
-		"forum": "http://forum.codeigniter.com/",
-		"slack": "https://codeigniterchat.slack.com",
-		"source": "https://github.com/bcit-ci/CodeIgniter"
+        "codeigniter/framework": "3.1.*",
+        "phpbenchmarks/code-igniter-common": "dev-code-igniter_3_hello-world"
 	}
 }
